  (except Asset Management, Account Manager and JS Components Sample)
- Add Client-Side Calculation Page Samples for SQLite and PostgreSQL.
- Update sample_schema_mysql.txt to merge schema_data.txt of Sample_Extensible Sample.
- Avoid outputting error messages in an error log file when not specifying the 'context' key of the 'file-upload' 
  key in a definition file.
- [BUG FIX] Fix compatibility when using INTERMediator.additionalCondition or INTERMediator.additionalSortKey.
  The affected version is 4.3 only (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix an error when the value of 'operator' is 'or' or 'and' in addtionalCondition with FileMaker Server.
  The affected versions are 3.11, 4.0, 4.1, 4.2 and 4.3 (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix not to show the error message (message id: 1024) when updating data using Safari (version 4.3 only).
- [BUG FIX] Fix an error in "Master-Detail Style Page" Sample for PostgreSQL (version 4.3 only).
- [BUG FIX] Fix updating data when uploading a file and specifying the 'field' key and not specifying the 'context' 
  key in the 'file-upload' key of the definition file.
- [BUG FIX] Avoid an error in getValueFromIMNode() of INTER-Mediator-Lib.js if the parameter is null.
- [BUG FIX] Fix handling the 'maxrecords' key in INTER-Mediator-Lib.js.

Ver.4.3 (2014/4/7)
- The Local Context is supported. You can bind the context named "_" at any place in a page file.
  The method IMLibLocalContext.getValue/setValue can be used for getting/setting the value.
- Validation doesn't call the eval function, but it changes to evaluate the expression to validate.
- The 'validation' in a context can set the 'notify' parameter. Its value can be 'alert', 'inline' and 'end-of-sibling'.
- The DataConverter_NullZeroString class added. This is for numeric field that the blank is treated as NULL.
- TinyMCE Ver.4.0.19 supported.
- "new Function()" statements have gone away. Moreover no eval function so far.