@@ -51,6 +51,7 @@ IMLibLocalContext = {
             this.store._im_additionalCondition = INTERMediator.additionalCondition;
             this.store._im_additionalSortKey = INTERMediator.additionalSortKey;
             this.store._im_startFrom = INTERMediator.startFrom;
+            this.store._im_pagedSize = INTERMediator.pagedSize;
             /*
              IE8 issue: "" string is modified as "null" on JSON stringify.
              http://blogs.msdn.com/b/jscript/archive/2009/06/23/serializing-the-value-of-empty-dom-elements-using-native-json-in-ie8.aspx
@@ -75,6 +76,9 @@ IMLibLocalContext = {
                 }
                 if (this.store._im_startFrom) {
                     INTERMediator.startFrom = this.store._im_startFrom;
+                }
+                if (this.store._im_pagedSize) {
+                    INTERMediator.pagedSize = this.store._im_pagedSize;
                 }
             }
         }
