@@ -23,6 +23,7 @@ function INTERMediatorLib() {
         
         initialize: function () {
             INTERMediator.startFrom = 0;
+            INTERMediator.pagedSize = 0;
             INTERMediator.additionalCondition = {};
             INTERMediator.additionalSortKey = {};
             
