@@ -36,7 +36,6 @@ var INTERMediator = {
     additionalFieldValueOnUpdate: {},
     additionalFieldValueOnDelete: {},
     waitSecondsAfterPostMessage: 4,
-    pagedSize: 0,
     pagedAllCount: 0,
     currentEncNumber: 0,
     isIE: false,
@@ -90,6 +89,8 @@ var INTERMediator = {
     /* These following properties moved to the setter/getter archtecture, and defined out side of this object.*/
     //startFrom: 0,
     // Start from this number of record for "skipping" records.
+    //pagedSize: 0,
+    // 
     //additionalCondition: {},
     // This array should be [{tableName: [{field:xxx,operator:xxx,value:xxxx}]}, ... ]
     //additionalSortKey: {},
@@ -2237,8 +2238,9 @@ var INTERMediator = {
                             break;
                         }
                     }
-                    if (currentContext['maxrecords']) {
-                        recordNumber = currentContext['maxrecords'];
+                    if (currentContext['maxrecords'] && INTERMediator.pagedSize > 0 
+                            && INTERMediatorLib.toNumber(currentContext['maxrecords']) >= INTERMediator.pagedSize ) {
+                        recordNumber = INTERMediator.pagedSize;
                     } else {
                         recordNumber = currentContext['records'];
                     }
@@ -2896,6 +2898,7 @@ INTERMediator.propertyIETridentSetup();
 
 if (INTERMediator.isIE && INTERMediator.ieVersion < 9) {
     INTERMediator.startFrom = 0;
+    INTERMediator.pagedSize = 0;
     INTERMediator.additionalCondition = {};
     INTERMediator.additionalSortKey = {};
 } else {
@@ -2905,6 +2908,14 @@ if (INTERMediator.isIE && INTERMediator.ieVersion < 9) {
         },
         set: function (value) {
             INTERMediator.setLocalProperty("_im_startFrom", value);
+        }
+    });
+    Object.defineProperty(INTERMediator, 'pagedSize', {
+        get: function () {
+            return INTERMediator.getLocalProperty("_im_pagedSize", 0);
+        },
+        set: function (value) {
+            INTERMediator.setLocalProperty("_im_pagedSize", value);
         }
     });
     Object.defineProperty(INTERMediator, 'additionalCondition', {
