@@ -14,7 +14,7 @@ IM_Entry(
         array(
             'name' => 'postalcode',
             'records' => 10,
-            'maxrecords' => 10,
+            'maxrecords' => 30,
             'paging' => true,
         ),
     ),
