@@ -22,6 +22,8 @@
 <div>
     検索条件:
     <input type="text" id="condition" data-im="_@condition">
+    表示件数：
+    <input type="text" id="number" data-im="_@_im_pagedSize" size="3">
     <button id="search">search</button>
 </div>
 <div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
